<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_largest"
    tools:context=".ui.activity.MainActivity"
    android:layout_marginTop="@dimen/margin_large">

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_largest"
        android:enabled="false"
        android:text="@android:string/ok" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_largest"
        android:hint="@string/h_name"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_largest"
        android:hint="@string/h_description"
        android:inputType="text"
        android:maxLines="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_largest"
        android:gravity="center">

        <ImageButton
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/downloadImage"
            android:src="@android:drawable/stat_sys_download" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloadImage" />
    </LinearLayout>
</LinearLayout>
